log-output/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: hashgenerator-dep
    namespace: exercises

spec:
    replicas: 1
    selector:
        matchLabels:
            app: logoutput
    template:
        metadata:
            labels:
                app: logoutput

        spec:
            volumes:
                - name: shared-file
                  emptyDir: {}

            containers:
                - name: logoutput-endpoint
                  image: aitoaarni/logoutput-endpoint:2.1
                  ports:
                      - containerPort: 8000
                  volumeMounts:
                      - name: shared-file
                        mountPath: /usr/src/app/volume
                  imagePullPolicy: Always

                - name: logoutput
                  image: aitoaarni/logoutput:1.10

                  volumeMounts:
                      - name: shared-file
                        mountPath: /usr/src/app/volume
