log-output/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
    name: logoutput-svc
    namespace: exercises
spec:
    type: ClusterIP
    selector:
        app: logoutput
    ports:
        - port: 2345
          protocol: TCP
          targetPort: 8000
